--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,18 +4,41 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "echo '⏳ Frontend será implementado no Sprint 9+' && exit 0",
-    "build": "echo '⏳ Frontend será implementado no Sprint 9+' && exit 0",
-    "lint": "echo '✅ Lint OK (placeholder)' && exit 0",
-    "lint:fix": "echo '✅ Lint fix OK (placeholder)' && exit 0",
-    "type-check": "echo '✅ Type check OK (placeholder)' && exit 0",
-    "preview": "echo '⏳ Frontend será implementado no Sprint 9+' && exit 0"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "type-check": "tsc --noEmit",
+    "preview": "next start"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.45.1",
     "@versix/shared": "workspace:*",
-    "@versix/database": "workspace:*"
+    "@versix/database": "workspace:*",
+    "firebase": "^10.12.3",
+    "idb": "^8.0.0",
+    "lucide-react": "^0.395.0",
+    "next": "^14.2.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "workbox-background-sync": "^7.1.0",
+    "workbox-expiration": "^7.1.0",
+    "workbox-precaching": "^7.1.0",
+    "workbox-routing": "^7.1.0",
+    "workbox-strategies": "^7.1.0",
+    "workbox-window": "^7.1.0"
   },
   "devDependencies": {
+    "@types/node": "^20.14.2",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^9.4.0",
+    "eslint-config-next": "^14.2.4",
+    "next-pwa": "^5.6.0",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5.4.0"
   }
 }
