--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,19 +14,14 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.45.1",
-    "@versix/shared": "workspace:*",
     "@versix/database": "workspace:*",
+    "@versix/shared": "workspace:*",
     "firebase": "^10.12.3",
-    "idb": "^8.0.0",
+    "idb": "^8.0.3",
     "lucide-react": "^0.395.0",
     "next": "^14.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "workbox-background-sync": "^7.1.0",
-    "workbox-expiration": "^7.1.0",
-    "workbox-precaching": "^7.1.0",
-    "workbox-routing": "^7.1.0",
-    "workbox-strategies": "^7.1.0",
     "workbox-window": "^7.1.0"
   },
   "devDependencies": {
@@ -39,6 +34,13 @@
     "next-pwa": "^5.6.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
-    "typescript": "^5.4.0"
+    "typescript": "^5.4.0",
+    "vite-plugin-pwa": "^1.2.0",
+    "workbox-background-sync": "^7.4.0",
+    "workbox-cacheable-response": "^7.4.0",
+    "workbox-expiration": "^7.4.0",
+    "workbox-precaching": "^7.4.0",
+    "workbox-routing": "^7.4.0",
+    "workbox-strategies": "^7.4.0"
   }
 }
