--- a/apps/web/.eslintrc.json
+++ b/apps/web/.eslintrc.json
@@ -1,4 +1,15 @@
 {
-  "extends": ["next", "next/core-web-vitals"],
-  "root": true
+  "extends": ["next/core-web-vitals"],
+  "rules": {
+    "@typescript-eslint/no-unused-vars": "warn",
+    "@typescript-eslint/no-explicit-any": "warn",
+    "react/no-unescaped-entities": "off",
+    "react-hooks/exhaustive-deps": "warn"
+  },
+  "ignorePatterns": [
+    "node_modules/",
+    ".next/",
+    "out/",
+    "public/sw.js",
+    "public/workbox-*.js"
 }
