--- a/package.json
+++ b/package.json
@@ -7,17 +7,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "pnpm --filter @versix/web lint",
     "lint:fix": "next lint --fix",
     "type-check": "tsc --noEmit",
     "preview": "next start",
-    "supabase:reset": "npx supabase db reset",
-    "lint": "pnpm --filter @versix/web lint"
+    "supabase:reset": "npx supabase db reset"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.45.1",
-    "@versix/shared": "workspace:*",
     "@versix/database": "workspace:*",
+    "@versix/shared": "workspace:*",
     "firebase": "^10.12.3",
     "idb": "^8.0.0",
     "lucide-react": "^0.395.0",
@@ -36,7 +35,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
-    "eslint": "^9.4.0",
+    "eslint": "^8.57.1",
     "eslint-config-next": "^14.2.4",
     "next-pwa": "^5.6.0",
     "postcss": "^8.4.38",
