--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -28,9 +28,13 @@
     "@types/node": "^20.14.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^8.50.1",
+    "@typescript-eslint/parser": "^8.50.1",
     "autoprefixer": "^10.4.19",
-    "eslint": "^9.4.0",
+    "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.4",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "next-pwa": "^5.6.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
