chore: atualização de dependências, correção de estrutura, instalação do supabase CLI e ajustes de ambiente

--- a/apps/web/public/manifest.json
+++ b/apps/web/public/manifest.json
@@ -1,164 +1,40 @@
 {
   "name": "Versix Norma",
   "short_name": "Norma",
-  "description": "Gestão inteligente de condomínios com IA",
+  "description": "Plataforma de Governança Condominial Inteligente",
   "start_url": "/",
-  "scope": "/",
   "display": "standalone",
+  "background_color": "#0f3460",
+  "theme_color": "#0f3460",
   "orientation": "portrait-primary",
-  "background_color": "#ffffff",
-  "theme_color": "#1E40AF",
-  "lang": "pt-BR",
-  "dir": "ltr",
-  "categories": ["lifestyle", "utilities", "productivity"],
-  
   "icons": [
-    {
-      "src": "/icons/icon-48x48.png",
-      "sizes": "48x48",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "/icons/icon-72x72.png",
-      "sizes": "72x72",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "/icons/icon-96x96.png",
-      "sizes": "96x96",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "/icons/icon-128x128.png",
-      "sizes": "128x128",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "/icons/icon-144x144.png",
-      "sizes": "144x144",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "/icons/icon-152x152.png",
-      "sizes": "152x152",
-      "type": "image/png",
-      "purpose": "any"
-    },
     {
       "src": "/icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "/icons/icon-384x384.png",
-      "sizes": "384x384",
-      "type": "image/png",
-      "purpose": "any"
+      "purpose": "any maskable"
     },
     {
       "src": "/icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "/icons/maskable-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "maskable"
+      "purpose": "any maskable"
     }
   ],
-  
-  "screenshots": [
-    {
-      "src": "/screenshots/mobile-dashboard.png",
-      "sizes": "390x844",
-      "type": "image/png",
-      "form_factor": "narrow",
-      "label": "Dashboard do morador"
-    },
-    {
-      "src": "/screenshots/mobile-comunicados.png",
-      "sizes": "390x844",
-      "type": "image/png",
-      "form_factor": "narrow",
-      "label": "Comunicados do condomínio"
-    },
-    {
-      "src": "/screenshots/desktop-dashboard.png",
-      "sizes": "1920x1080",
-      "type": "image/png",
-      "form_factor": "wide",
-      "label": "Dashboard completo"
-    }
-  ],
-  
   "shortcuts": [
     {
       "name": "Comunicados",
       "short_name": "Comunicados",
-      "description": "Ver comunicados do condomínio",
-      "url": "/comunicados",
-      "icons": [{ "src": "/icons/comunicados-96x96.png", "sizes": "96x96" }]
+      "url": "/home?tab=comunicados",
+      "icons": [{ "src": "/icons/comunicados.png", "sizes": "96x96" }]
     },
     {
       "name": "SOS Emergência",
       "short_name": "SOS",
-      "description": "Contatos de emergência",
-      "url": "/emergencia",
-      "icons": [{ "src": "/icons/sos-96x96.png", "sizes": "96x96" }]
-    },
-    {
-      "name": "Meu Boleto",
-      "short_name": "Boleto",
-      "description": "Acessar boleto do mês",
-      "url": "/financeiro/boleto",
-      "icons": [{ "src": "/icons/boleto-96x96.png", "sizes": "96x96" }]
-    },
-    {
-      "name": "Falar com Norma",
-      "short_name": "Norma",
-      "description": "Assistente de IA",
-      "url": "/norma",
-      "icons": [{ "src": "/icons/norma-96x96.png", "sizes": "96x96" }]
+      "url": "/home?sos=true",
+      "icons": [{ "src": "/icons/sos.png", "sizes": "96x96" }]
     }
   ],
-  
-  "share_target": {
-    "action": "/share",
-    "method": "POST",
-    "enctype": "multipart/form-data",
-    "params": {
-      "title": "title",
-      "text": "text",
-      "url": "url",
-      "files": [
-        {
-          "name": "media",
-          "accept": ["image/*", "application/pdf"]
-        }
-      ]
-    }
-  },
-  
-  "related_applications": [],
-  "prefer_related_applications": false,
-  
-  "protocol_handlers": [
-    {
-      "protocol": "web+versixnorma",
-      "url": "/handle?url=%s"
-    }
-  ],
-  
-  "handle_links": "preferred",
-  "launch_handler": {
-    "client_mode": "navigate-existing"
-  }
+  "categories": ["lifestyle", "utilities", "productivity"],
+  "lang": "pt-BR"
 }
