--- a/apps/web.bak/package.json
+++ b/apps/web.bak/package.json
@@ -7,27 +7,21 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "pnpm --filter @versix/web lint",
-    "lint:fix": "next lint --fix",
+    "lint": "eslint src --ext .js,.jsx,.ts,.tsx",
+    "lint:fix": "eslint src --ext .js,.jsx,.ts,.tsx --fix",
     "type-check": "tsc --noEmit",
-    "preview": "next start",
-    "supabase:reset": "npx supabase db reset"
+    "preview": "next start"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.45.1",
     "@versix/database": "workspace:*",
     "@versix/shared": "workspace:*",
     "firebase": "^10.12.3",
-    "idb": "^8.0.0",
+    "idb": "^8.0.3",
     "lucide-react": "^0.395.0",
-    "next": "^14.2.35",
+    "next": "^14.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "workbox-background-sync": "^7.1.0",
-    "workbox-expiration": "^7.1.0",
-    "workbox-precaching": "^7.1.0",
-    "workbox-routing": "^7.1.0",
-    "workbox-strategies": "^7.1.0",
     "workbox-window": "^7.1.0"
   },
   "devDependencies": {
@@ -37,13 +31,20 @@
     "@typescript-eslint/eslint-plugin": "^8.50.1",
     "@typescript-eslint/parser": "^8.50.1",
     "autoprefixer": "^10.4.19",
-    "eslint": "^8.57.1",
+    "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.4",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "next-pwa": "^5.6.0",
     "postcss": "^8.4.38",
-    "supabase": "^1.226.4",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.4.0",
-    "workbox-build": "^7.4.0"
+    "vite-plugin-pwa": "^1.2.0",
+    "workbox-background-sync": "^7.4.0",
+    "workbox-cacheable-response": "^7.4.0",
+    "workbox-expiration": "^7.4.0",
+    "workbox-precaching": "^7.4.0",
+    "workbox-routing": "^7.4.0",
+    "workbox-strategies": "^7.4.0"
   }
 }
