--- a/apps/web/.eslintrc.json
+++ b/apps/web/.eslintrc.json
@@ -1,19 +1,16 @@
 {
   "extends": ["next/core-web-vitals"],
-  "plugins": ["@typescript-eslint"],
-  "parser": "@typescript-eslint/parser",
   "rules": {
-    "@typescript-eslint/no-unused-vars": [
-      "warn",
-      {
-        "argsIgnorePattern": "^_",
-        "varsIgnorePattern": "^_",
-        "caughtErrorsIgnorePattern": "^_"
-      }
-    ],
+    "@typescript-eslint/no-unused-vars": "warn",
     "@typescript-eslint/no-explicit-any": "warn",
     "react/no-unescaped-entities": "off",
     "react-hooks/exhaustive-deps": "warn"
   },
-  "ignorePatterns": ["node_modules/", ".next/", "out/", "public/sw.js", "public/workbox-*.js"]
+  "ignorePatterns": [
+    "node_modules/",
+    ".next/",
+    "out/",
+    "public/sw.js",
+    "public/workbox-*.js"
+  ]
 }
