--- a/.prettierrc
+++ b/.prettierrc
@@ -5,9 +5,7 @@
   "trailingComma": "es5",
   "printWidth": 100,
   "bracketSpacing": true,
-  "bracketSameLine": false,
   "arrowParens": "always",
   "endOfLine": "lf",
-  "plugins": ["prettier-plugin-tailwindcss"],
-  "tailwindFunctions": ["clsx", "cn", "cva"]
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
