--- a/package.json
+++ b/package.json
@@ -1,49 +1,37 @@
 {
-  "name": "@versix/web",
+  "name": "versix-norma",
   "version": "1.0.1",
   "private": true,
-  "type": "module",
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "pnpm --filter @versix/web lint",
-    "lint:fix": "next lint --fix",
-    "type-check": "tsc --noEmit",
-    "preview": "next start",
-    "supabase:reset": "npx supabase db reset"
+  "packageManager": "pnpm@8.15.0",
+  "engines": {
+    "node": ">=18.17.0",
+    "pnpm": ">=8.0.0"
   },
-  "dependencies": {
-    "@tanstack/react-query": "^5.45.1",
-    "@versix/database": "workspace:*",
-    "@versix/shared": "workspace:*",
-    "firebase": "^10.12.3",
-    "idb": "^8.0.0",
-    "lucide-react": "^0.395.0",
-    "next": "^14.2.35",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "workbox-background-sync": "^7.1.0",
-    "workbox-expiration": "^7.1.0",
-    "workbox-precaching": "^7.1.0",
-    "workbox-routing": "^7.1.0",
-    "workbox-strategies": "^7.1.0",
-    "workbox-window": "^7.1.0"
+  "scripts": {
+    "dev": "pnpm --filter @versix/web dev",
+    "build": "pnpm --filter @versix/web build",
+    "start": "pnpm --filter @versix/web start",
+    "lint": "pnpm --filter @versix/web lint",
+    "lint:fix": "pnpm --filter @versix/web lint -- --fix",
+    "type-check": "pnpm --filter @versix/web type-check",
+    "clean": "rm -rf node_modules apps/web/node_modules apps/web/.next",
+    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
+    "prepare": "husky install || true"
   },
   "devDependencies": {
-    "@types/node": "^20.14.2",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^8.50.1",
-    "@typescript-eslint/parser": "^8.50.1",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^8.57.1",
-    "eslint-config-next": "^14.2.4",
-    "next-pwa": "^5.6.0",
-    "postcss": "^8.4.38",
-    "supabase": "^1.226.4",
-    "tailwindcss": "^3.4.4",
-    "typescript": "^5.4.0",
-    "workbox-build": "^7.4.0"
+    "eslint": "^8.57.0",
+    "prettier": "^3.3.0",
+    "typescript": "^5.5.3",
+    "husky": "^9.0.0",
+    "lint-staged": "^15.2.0"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{json,md}": [
+      "prettier --write"
+    ]
   }
 }
