--- a/.prettierignore
+++ b/.prettierignore
@@ -1,26 +1,10 @@
-# Dependencies
-node_modules/
-.pnpm-store/
-
-# Build outputs
-dist/
-.next/
-out/
-build/
-
-# Cache
-.turbo/
-.cache/
-
-# Generated
-packages/database/types/database.ts
-*.generated.ts
-
-# Lock files
+node_modules
+.next
+out
+dist
+build
+*.min.js
 pnpm-lock.yaml
 package-lock.json
-yarn.lock
-
-# Misc
-coverage/
-*.log
+public/sw.js
+public/workbox-*.js
