--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "eslint": "^8.57.0",
     "prettier": "^3.3.0",
     "typescript": "^5.5.3",
+    "@typescript-eslint/parser": "^6.14.0",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "husky": "^9.0.0",
     "lint-staged": "^15.2.0"
   },
