--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,8 @@
 {
-  "buildCommand": "pnpm build",
+  "buildCommand": "cd apps/web && pnpm build",
   "installCommand": "pnpm install",
-  "devCommand": "pnpm dev",
+  "devCommand": "cd apps/web && pnpm dev",
   "framework": "nextjs",
-  "rootDirectory": "apps/web",
   "cleanUrls": true,
   "trailingSlash": false,
   "routes": [
