--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -169,7 +169,7 @@ jobs:
   deploy-production:
     name: Deploy Production
     runs-on: ubuntu-latest
-    needs: build
+    needs: lint  # Changed from build to lint to avoid artifact dependency issues
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     environment:
       name: production
@@ -177,26 +177,34 @@ jobs:
     env:
       VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
       VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+      NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}
+      NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
+      NEXT_PUBLIC_APP_URL: ${{ secrets.NEXT_PUBLIC_APP_URL }}
+      NEXT_PUBLIC_APP_NAME: ${{ secrets.NEXT_PUBLIC_APP_NAME }}
+      NEXT_PUBLIC_DEMO_CONDOMINIO_ID: ${{ secrets.NEXT_PUBLIC_DEMO_CONDOMINIO_ID }}
+      NEXT_PUBLIC_DEMO_CODIGO_CONVITE: ${{ secrets.NEXT_PUBLIC_DEMO_CODIGO_CONVITE }}
+      NEXT_PUBLIC_ENABLE_PWA: ${{ secrets.NEXT_PUBLIC_ENABLE_PWA || 'true' }}
+      NEXT_PUBLIC_ENABLE_NORMA_AI: ${{ secrets.NEXT_PUBLIC_ENABLE_NORMA_AI || 'true' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
-      - name: Download build artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: nextjs-build
-          path: apps/web/.next
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v2
         with:
           version: ${{ env.PNPM_VERSION }}
-          cache: 'pnpm'
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
+          cache: 'pnpm'
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+
+      - name: Build application
+        run: pnpm build
 
       - name: Install Vercel CLI
         run: npm install --global vercel@latest
@@ -216,7 +224,7 @@ jobs:
           EOF
 
           # Deploy para produção
-          vercel deploy --prebuilt --prod --token=$VERCEL_TOKEN
+          vercel deploy --prod --token=$VERCEL_TOKEN
 
       - name: Notify deployment success
         run: |
