fix: use official Vercel action for production deploy to ensure proper token authentication
- Replaced manual vercel CLI call with amondnet/vercel-action@v25
- Added --prebuilt flag since build is done locally
- Added step to create .env.production file before deploy
- This ensures VERCEL_TOKEN is properly handled by the action

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -209,13 +209,9 @@ jobs:
       - name: Install Vercel CLI
         run: npm install --global vercel@latest
 
-      - name: Deploy to Vercel (Production)
-        env:
-          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+      - name: Create environment file
         run: |
           cd apps/web
-
-          # Criar arquivo .env.production
           cat > .env.production << EOF
           NEXT_PUBLIC_SUPABASE_URL=${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}
           NEXT_PUBLIC_SUPABASE_ANON_KEY=${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
@@ -223,8 +219,14 @@ jobs:
           NEXT_PUBLIC_APP_NAME=${{ secrets.NEXT_PUBLIC_APP_NAME || 'Versix Norma' }}
           EOF
 
-          # Deploy para produção
-          vercel deploy --prod --token=$VERCEL_TOKEN
+      - name: Deploy to Vercel (Production)
+        uses: amondnet/vercel-action@v25
+        with:
+          vercel-token: ${{ secrets.VERCEL_TOKEN }}
+          vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
+          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
+          vercel-args: '--prod --prebuilt'
+          working-directory: ./apps/web
 
       - name: Notify deployment success
         run: |
