fix: simplify CI/CD workflow by removing build artifacts and --prebuilt flag
- Removed separate build job to eliminate artifact dependencies
- Both deploy jobs now build locally with pnpm build
- Removed --prebuilt flag since we're using Next.js build output
- Deploy jobs depend only on lint for faster, more reliable deploys
- Each deploy job is now self-contained with its own build process

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -43,21 +43,16 @@ jobs:
         run: pnpm type-check
 
   # ============================================
-  # BUILD & TEST
+  # DEPLOY PREVIEW (apenas para PRs)
   # ============================================
-  build:
-    name: Build
+  deploy-preview:
+    name: Deploy Preview
     runs-on: ubuntu-latest
     needs: lint
-    env:
-      NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}
-      NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
-      NEXT_PUBLIC_APP_URL: ${{ secrets.NEXT_PUBLIC_APP_URL }}
-      NEXT_PUBLIC_APP_NAME: ${{ secrets.NEXT_PUBLIC_APP_NAME }}
-      NEXT_PUBLIC_DEMO_CONDOMINIO_ID: ${{ secrets.NEXT_PUBLIC_DEMO_CONDOMINIO_ID }}
-      NEXT_PUBLIC_DEMO_CODIGO_CONVITE: ${{ secrets.NEXT_PUBLIC_DEMO_CODIGO_CONVITE }}
-      NEXT_PUBLIC_ENABLE_PWA: ${{ secrets.NEXT_PUBLIC_ENABLE_PWA || 'true' }}
-      NEXT_PUBLIC_ENABLE_NORMA_AI: ${{ secrets.NEXT_PUBLIC_ENABLE_NORMA_AI || 'true' }}
+    if: github.event_name == 'pull_request'
+    environment:
+      name: preview
+      url: ${{ steps.deploy.outputs.deployment-url }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -76,62 +71,18 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
-      - name: Debug - Mostrar variáveis (mascaradas)
-        run: |
-          echo "✅ NEXT_PUBLIC_SUPABASE_URL está definido: $([ -n "$NEXT_PUBLIC_SUPABASE_URL" ] && echo 'SIM' || echo 'NÃO')"
-          echo "✅ NEXT_PUBLIC_SUPABASE_ANON_KEY está definido: $([ -n "$NEXT_PUBLIC_SUPABASE_ANON_KEY" ] && echo 'SIM' || echo 'NÃO')"
-          echo "🔍 APP_URL: $NEXT_PUBLIC_APP_URL"
-          echo "🔍 APP_NAME: $NEXT_PUBLIC_APP_NAME"
-
       - name: Build application
         run: pnpm build
-        continue-on-error: false
-
-      - name: Upload build artifacts
-        if: success()
-        uses: actions/upload-artifact@v4
-        with:
-          name: nextjs-build
-          path: apps/web/.next
-          retention-days: 7
-
-  # ============================================
-  # DEPLOY PREVIEW (apenas para PRs)
-  # ============================================
-  deploy-preview:
-    name: Deploy Preview
-    runs-on: ubuntu-latest
-    needs: build
-    if: github.event_name == 'pull_request'
-    environment:
-      name: preview
-      url: ${{ steps.deploy.outputs.deployment-url }}
-    env:
-      VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
-      VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Download build artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: nextjs-build
-          path: apps/web/.next
-
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: ${{ env.PNPM_VERSION }}
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-          cache: 'pnpm'
-
-      - name: Install Vercel CLI
-        run: npm install --global vercel@latest
+        working-directory: ./apps/web
+        env:
+          NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}
+          NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
+          NEXT_PUBLIC_APP_URL: ${{ secrets.NEXT_PUBLIC_APP_URL }}
+          NEXT_PUBLIC_APP_NAME: ${{ secrets.NEXT_PUBLIC_APP_NAME }}
+          NEXT_PUBLIC_DEMO_CONDOMINIO_ID: ${{ secrets.NEXT_PUBLIC_DEMO_CONDOMINIO_ID }}
+          NEXT_PUBLIC_DEMO_CODIGO_CONVITE: ${{ secrets.NEXT_PUBLIC_DEMO_CODIGO_CONVITE }}
+          NEXT_PUBLIC_ENABLE_PWA: ${{ secrets.NEXT_PUBLIC_ENABLE_PWA || 'true' }}
+          NEXT_PUBLIC_ENABLE_NORMA_AI: ${{ secrets.NEXT_PUBLIC_ENABLE_NORMA_AI || 'true' }}
 
       - name: Create environment file for preview
         run: |
@@ -150,7 +101,6 @@ jobs:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
-          vercel-args: '--prebuilt'
           working-directory: ./apps/web
 
       - name: Comment PR with preview URL
@@ -226,7 +176,7 @@ jobs:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
-          vercel-args: '--prod --prebuilt'
+          vercel-args: '--prod'
           working-directory: ./apps/web
 
       - name: Notify deployment success
