--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -8,12 +8,14 @@
     ".": "./index.ts",
     "./constants": "./constants/index.ts",
     "./utils": "./utils/index.ts",
-    "./validators": "./validators/index.ts"
+    "./validators": "./validators/index.ts",
+    "./types/operational": "./src/types/operational.ts"
   },
   "scripts": {
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "build": "tsc"
   },
   "dependencies": {
     "zod": "^3.22.0"
