--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -53,8 +53,7 @@
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
+    "tailwindcss-animate": "^1.0.7",    "@versix/shared": "workspace:*",    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20.14.0",
