fix: export financial types from shared package
- Add financial types export in package.json
- Export financial types from index.ts
- Fixes build error: Cannot find module '@versix/shared/types/financial'

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -9,7 +9,8 @@
     "./constants": "./constants/index.ts",
     "./utils": "./utils/index.ts",
     "./validators": "./validators/index.ts",
-    "./types/operational": "./src/types/operational.ts"
+    "./types/operational": "./src/types/operational.ts",
+    "./types/financial": "./src/types/financial.ts"
   },
   "scripts": {
     "lint": "eslint .",
